--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <h2 id="📚-api-reference" class="tsd-anchor-link">📚 API Reference<a href="#📚-api-reference" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24" aria-hidden="true"><use href="assets/icons.svg#icon-anchor"></use></svg></a></h2><p>You can find the complete API reference documentation for <code>TypedEventEmitter</code> at:</p>
 <ul>
-<li><a href="https://komiriko.github.io/komi-logger">Reference Documentation</a></li>
+<li><a href="https://nowarajs.github.io/typed-event-emitter/">Reference Documentation</a></li>
 </ul>
 <h2 id="⚖️-license" class="tsd-anchor-link">⚖️ License<a href="#⚖️-license" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24" aria-hidden="true"><use href="assets/icons.svg#icon-anchor"></use></svg></a></h2><p>Distributed under the MIT License. See <a href="media/LICENSE">LICENSE</a> for more information.</p>
 <h2 id="📧-contact" class="tsd-anchor-link">📧 Contact<a href="#📧-contact" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24" aria-hidden="true"><use href="assets/icons.svg#icon-anchor"></use></svg></a></h2><p>NowaraJS - <a href="https://github.com/NowaraJS">GitHub Organization</a></p>
