deploy: 9a13be025e3fc119f36b33c98f9a00aa0fb0d5d8

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h2 id="✨-features" class="tsd-anchor-link">✨ Features<a href="#✨-features" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24" aria-hidden="true"><use href="assets/icons.svg#icon-anchor"></use></svg></a></h2><ul>
 <li>🔒 <strong>Type Safety</strong>: Full TypeScript support with strongly typed event names and payloads</li>
 <li>🧩 <strong>Generic Design</strong>: Define custom event maps for your specific use cases</li>
-<li>🔄 <strong>Familiar API</strong>: Extends Node.js EventEmitter with the same familiar methods</li>
+<li>🔄 <strong>Familiar API</strong>: Extends EventEmitter with the same familiar methods</li>
 <li>📦 <strong>Zero Dependencies</strong>: No external runtime dependencies</li>
 <li>🚀 <strong>Modern</strong>: Built with modern TypeScript and supports ESM</li>
 <li>🧪 <strong>Well Tested</strong>: Comprehensive test suite included</li>
