--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <ul>
 <li><a href="https://nowarajs.github.io/typed-event-emitter/">Reference Documentation</a></li>
 </ul>
-<h2 id="⚖️-license" class="tsd-anchor-link">⚖️ License<a href="#⚖️-license" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24" aria-hidden="true"><use href="assets/icons.svg#icon-anchor"></use></svg></a></h2><p>Distributed under the MIT License. See <a href="media/LICENSE">LICENSE</a> for more information.</p>
+<h2 id="⚖️-license" class="tsd-anchor-link">⚖️ License<a href="#⚖️-license" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24" aria-hidden="true"><use href="assets/icons.svg#icon-anchor"></use></svg></a></h2><p>Distributed under the MIT License. See <a href="./LICENSE">LICENSE</a> for more information.</p>
 <h2 id="📧-contact" class="tsd-anchor-link">📧 Contact<a href="#📧-contact" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24" aria-hidden="true"><use href="assets/icons.svg#icon-anchor"></use></svg></a></h2><ul>
 <li>GitHub: <a href="https://github.com/NowaraJS">NowaraJS</a></li>
 <li>Package: <a href="https://www.npmjs.com/package/@nowarajs/typed-event-emitter">@nowarajs/typed-event-emitter</a></li>
