--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 <li>🔒 <strong>Type Safety</strong>: Full TypeScript support with strongly typed event names and payloads</li>
 <li>🧩 <strong>Generic Design</strong>: Define custom event maps for your specific use cases</li>
 <li>🔄 <strong>Familiar API</strong>: Extends EventEmitter with the same familiar methods</li>
-<li>📦 <strong>Zero Dependencies</strong>: No external runtime dependencies</li>
-<li>🚀 <strong>Modern</strong>: Built with modern TypeScript and supports ESM</li>
-<li>🧪 <strong>Well Tested</strong>: Comprehensive test suite included</li>
+<li>📦 <strong>Zero Dependencies</strong>: 0 dependencies</li>
 </ul>
 <h2 id="🔧-installation" class="tsd-anchor-link">🔧 Installation<a href="#🔧-installation" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24" aria-hidden="true"><use href="assets/icons.svg#icon-anchor"></use></svg></a></h2><pre><code class="bash"><span class="hl-0">bun</span><span class="hl-1"> </span><span class="hl-2">add</span><span class="hl-1"> </span><span class="hl-2">@nowarajs/typed-event-emitter</span>
 </code><button type="button">Copy</button></pre>
