deploy: f1599ffcb97b6b5dc4a7c1e50d22f281fadfc56d

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 <li><a href="#-description">📝 Description</a></li>
 <li><a href="#-features">✨ Features</a></li>
 <li><a href="#-installation">🔧 Installation</a></li>
-<li><a href="#-usage">⚙️ Usage</a></li>
+<li><a href="#-usage">⚙️ Usage</a>
+<ul>
+<li><a href="#basic-usage">Basic Usage</a></li>
+<li><a href="#advanced-usage">Advanced Usage</a></li>
+</ul>
+</li>
 <li><a href="#-api-reference">📚 API Reference</a></li>
 <li><a href="#-license">⚖️ License</a></li>
 <li><a href="#-contact">📧 Contact</a></li>
